--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img class="conteinar-imagem" src="./assets/img.png" alt="img da Joana programando">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p>Desenvolvido por Lázaro - Alura</p>
     </footer>
             
 </body>
